Fixes #1 - Spacing, padding, height on mobile page width

--- a/static/css/hyde.css
+++ b/static/css/hyde.css
@@ -58,21 +58,11 @@ pre {
 
 .sidebar {
   text-align: center;
-  padding: 2rem 1rem;
+  /*padding: 2rem 1rem;*/
   color: rgba(245,245,250,.5);
-
-  background: #392f27; /* Old browsers */
-  background: -moz-linear-gradient(top,  #392f27 21%, #392f27 21%, #6d5f4b 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(21%,#392f27), color-stop(21%,#392f27), color-stop(100%,#6d5f4b)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #392f27 21%,#392f27 21%,#6d5f4b 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #392f27 21%,#392f27 21%,#6d5f4b 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #392f27 21%,#392f27 21%,#6d5f4b 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  #392f27 21%,#392f27 21%,#6d5f4b 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#392f27', endColorstr='#6d5f4b',GradientType=0 ); /* IE6-9 */
-
+  background: #392f27;
   background-image: url(/wp-content/uploads/2014/09/tile2.png);
   background-repeat: repeat; 
-
 }
 
 @media (min-width: 48em) {
@@ -82,6 +72,7 @@ pre {
     left: 0;
     bottom: 0;
     width: 15rem;
+    padding: 2rem 1rem;
     text-align: left;
   }
 }
@@ -100,8 +91,8 @@ pre {
 
 /* Sidebar nav */
 .sidebar-nav {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+/*  margin-top: 2rem;
+  margin-bottom: 2rem;*/
   padding-left: 0;
   list-style: none;
 }
@@ -120,6 +111,13 @@ a.sidebar-nav-item:focus {
 }
 .sidebar-nav-item.active {
   font-weight: bold;
+}
+
+@media (min-width: 48em) {
+  .sidebar-nav {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
 }
 
 /* Sticky sidebar
@@ -145,8 +143,8 @@ a.sidebar-nav-item:focus {
  */
 
 .content {
-  padding-top:    2rem;
-  padding-bottom: 2rem;
+  padding-top:    0rem;
+  padding-bottom: 1rem;
 }
 
 @media (min-width: 48em) {
@@ -154,6 +152,8 @@ a.sidebar-nav-item:focus {
     max-width: 38rem;
     margin-left: 17rem;
     margin-right: 2rem;
+    padding-top:    2rem;
+    padding-bottom: 2rem;
   }
 }
 
@@ -162,6 +162,8 @@ a.sidebar-nav-item:focus {
     max-width: 44rem;
     margin-left: 17rem;
     margin-right: 2rem;
+    padding-top:    2rem;
+    padding-bottom: 2rem;
   }
 }
 
@@ -186,6 +188,18 @@ a.sidebar-nav-item:focus {
 .brand {
   font-size: 4.0em;
   margin-bottom: 0;
+}
+
+.social-icon {
+  margin-left: 0.15rem;
+  margin-right: 0.15rem;
+}
+
+@media (min-width: 48em) {
+  .social-icon {
+    margin-left: 0.08rem;
+    margin-right: 0.08rem;
+  }
 }
 
 /*
